# cgpav

./: Makefile.in  README.md  avpcomm.c  avpcomm.h  cfg.c  cfg.h  cgpav.c  clamdcomm.c  clamdcomm.h  commoncomm.c  commoncomm.h  config.h.in  configure  configure.in  drwebcomm.c  drwebcomm.h  email.c  email.h  fptools.c  fptools.h  kavcomm.c  kavcomm.h  mysqlcomm.c  mysqlcomm.h  pgsqlcomm.c  pgsqlcomm.h  sophoscomm.c  sophoscomm.h  spamassassin.c  spamassassin.h  spamdcomm.c  spamdcomm.h  trophiecomm.c  trophiecomm.h  util.c  util.h  uucheck.c  uudeview.h  uuint.h  uulib.c  (+7 more)
conf/: cgpav.conf
cron/: clamavwatcher.sh  delete_old_mail  kavupdater  sophosupdate.pl
doc/: ChangeLog  cgpav-rus.html  cgpav.html
spam/conf/: local.cf
spam/sql/: pgsql_userpref.sql
spam/squirrelmail/spamassassin_sql/: README  cache_lite.php  config.php  functions.php  index.php  options.php  setup.php  tests.php
spam/test/: testmessages.pl
spam/www/php/: CLI.php  cache_lite.php  functions.php  index.php  sa.php  tests.php
